--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -177,21 +177,27 @@ jobs:
           csv_file="target_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
           source_csv_file="source_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
 
-          # Load the original relatedImages and RELATED_IMAGE sections
+           Load the original relatedImages from the target CSV
           related_images=$(yq eval '.spec.relatedImages' "$csv_file")
-          related_image_envs=$(yq eval '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name | startswith("RELATED_IMAGE_"))' "$csv_file")
-
-          # Remove the images section in the source CSV to avoid overwriting
+          
+          # Remove the relatedImages section in the source CSV to avoid overwriting
           yq eval 'del(.spec.relatedImages)' -i "$source_csv_file"
 
-          # Merge back the original relatedImages from the target CSV
-          echo "Restoring relatedImages and RELATED_IMAGE sections."
-          yq eval -i '.spec.relatedImages = load("target_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml").spec.relatedImages' "$source_csv_file"
+          # Restore the relatedImages from the target CSV to the source CSV
+          echo "Restoring relatedImages."
+          yq eval -i ".spec.relatedImages = $related_images" "$source_csv_file"
 
-          # Restore the RELATED_IMAGE_* sections
-          for row in $(echo "$related_image_envs" | yq -r '.name' -); do
+          # Extract RELATED_IMAGE_* environment variables from the target CSV
+          related_image_envs=$(yq eval '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name | startswith("RELATED_IMAGE_"))' "$csv_file")
+
+          # Check and restore the RELATED_IMAGE_* sections
+          for row in $(echo "$related_image_envs" | yq -r '.name'); do
             value=$(echo "$related_image_envs" | yq -r --arg name "$row" '. | select(.name == $name).value')
-            yq eval -i ".spec.install.spec.deployments[0].spec.template.spec.containers[].env += [{name: \"$row\", value: \"$value\"}]" "$source_csv_file"
+            # Only add if the key is not already in the source CSV
+            if ! yq eval "any(.spec.install.spec.deployments[0].spec.template.spec.containers[].env[]; .name == \"$row\")" "$source_csv_file"; then
+              echo "Restoring $row"
+              yq eval -i ".spec.install.spec.deployments[0].spec.template.spec.containers[].env += [{name: \"$row\", value: \"$value\"}]" "$source_csv_file"
+            fi
           done
 
       - name: Remove Unwanted Labels from Dockerfile
