--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -188,12 +188,12 @@ jobs:
           yq eval -i ".spec.relatedImages = $related_images" "$source_csv_file"
 
           # Extract RELATED_IMAGE_* environment variables from the target CSV
-          related_image_envs=$(yq eval -o=json '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name | startswith("RELATED_IMAGE_"))' "$csv_file")
+          related_image_envs=$(yq eval '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name == "RELATED_IMAGE_*")' "$csv_file")
 
           # Loop through related_image_envs to restore them to the source CSV
-          for row in $(echo "$related_image_envs" | jq -c '.'); do
-            name=$(echo "$row" | jq -r '.name')
-            value=$(echo "$row" | jq -r '.value')
+          for row in $(echo "$related_image_envs" | yq eval -o=json '.name'); do
+            name=$(echo "$row" | yq eval -r '.name')
+            value=$(echo "$row" | yq eval -r '.value')
 
             # Check if the environment variable already exists in the source CSV
             if ! yq eval "any(.spec.install.spec.deployments[0].spec.template.spec.containers[].env[]; .name == \"$name\")" "$source_csv_file"; then
