--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -177,41 +177,59 @@ jobs:
           csv_file="target_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
           source_csv_file="source_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
 
+          # Ensure the CSV file exists before proceeding
+          if [ ! -f "$csv_file" ]; then
+              echo "CSV file not found: $csv_file"
+              exit 1
+          fi
+
           # Load the original relatedImages from the target CSV
           related_images=$(yq eval '.spec.relatedImages' "$csv_file")
 
-          # Remove the relatedImages section in the source CSV to avoid overwriting
-          yq eval 'del(.spec.relatedImages)' -i "$source_csv_file"
 
-          # Restore the relatedImages from the target CSV to the source CSV
-          echo "Restoring relatedImages."
-          yq eval -i ".spec.relatedImages = $related_images" "$source_csv_file"
-
+          # Ensure relatedImages section exists before proceeding
+          if [ "$related_images" != "null" ]; then
+              # Remove the relatedImages section in the source CSV to avoid overwriting
+              yq eval 'del(.spec.relatedImages)' -i "$source_csv_file"
+          
+              # Restore the relatedImages from the target CSV to the source CSV
+              echo "Restoring relatedImages."
+              yq eval -i ".spec.relatedImages = $related_images" "$source_csv_file"
+          else
+              echo "No relatedImages section found in target CSV."
+          fi
+          
           # Extract RELATED_IMAGE_* environment variables from the target CSV
           related_image_envs=$(yq eval '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name | test("^RELATED_IMAGE_"))' "$csv_file")
-
-          # Loop through and restore related image environment variables
-          echo "$related_image_envs" | yq eval -o=json | jq -c '.[]' | while IFS= read -r row; do
-              name=$(echo "$row" | jq -r '.name')
-              value=$(echo "$row" | jq -r '.value')
-
-              # Restore the environment variable in the source CSV
-              echo "Restoring $name"
-              yq eval -i ".spec.install.spec.deployments[0].spec.template.spec.containers[].env += [{name: \"$name\", value: \"$value\"}]" "$source_csv_file"
-          done
+          
+          # Ensure related image environment variables exist before processing
+          if [ "$related_image_envs" != "null" ]; then
+              # Loop through and restore related image environment variables
+              echo "$related_image_envs" | yq eval -o=json | jq -c '.[]' | while IFS= read -r row; do
+                  name=$(echo "$row" | jq -r '.name')
+                  value=$(echo "$row" | jq -r '.value')
+          
+                  if [ -n "$name" ]; then
+                      echo "Restoring $name"
+                      # Append the environment variable to the source CSV
+                      yq eval -i ".spec.install.spec.deployments[0].spec.template.spec.containers[].env += [{name: \"$name\", value: \"$value\"}]" "$source_csv_file"
+                  fi
+              done
+          else
+              echo "No RELATED_IMAGE_* environment variables found."
+          fi
 
       - name: Remove Unwanted Labels from Dockerfile
         run: |
           # Remove specific labels from the Dockerfile in the target repo
-          dockerfile_path="target_repo/Dockerfiles/bundle.Dockerfile"
+          dockerfile_path="target_repo/bundle/Dockerfile"
           yq eval 'del(.annotations."operators.operatorframework.io.bundle.channels.v1", .annotations."operators.operatorframework.io.bundle.channel.default.v1")' -i "$dockerfile_path"
 
       - name: Sync Dockerfile
         run: |
-          if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/Dockerfiles/bundle.Dockerfile > /dev/null 2>&1; then
+          if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
             echo "Updating Dockerfile"
-            cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/Dockerfiles/bundle.Dockerfile
-          else
+            cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
             echo "No changes in Dockerfile"
           fi
 
