--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -176,55 +176,31 @@ jobs:
         run: |
           csv_file="target_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
           source_csv_file="source_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml"
-
+          
           # Ensure the CSV file exists before proceeding
           if [ ! -f "$csv_file" ]; then
               echo "CSV file not found: $csv_file"
               exit 1
           fi
-
-          # Load the original relatedImages from the target CSV
-          related_images=$(yq eval '.spec.relatedImages' "$csv_file")
-
-
-          # Ensure relatedImages section exists before proceeding
-          if [ "$related_images" != "null" ]; then
-              # Remove the relatedImages section in the source CSV to avoid overwriting
-              yq eval 'del(.spec.relatedImages)' -i "$source_csv_file"
           
-              # Restore the relatedImages from the target CSV to the source CSV
-              echo "Restoring relatedImages."
-              yq eval -i ".spec.relatedImages = $related_images" "$source_csv_file"
-          else
-              echo "No relatedImages section found in target CSV."
-          fi
+          # Backup the original source file
+          cp "$source_csv_file" "${source_csv_file}.backup"
           
-          # Extract RELATED_IMAGE_* environment variables from the target CSV
-          related_image_envs=$(yq eval '.spec.install.spec.deployments[0].spec.template.spec.containers[].env[] | select(.name | test("^RELATED_IMAGE_"))' "$csv_file")
+          # Preserve the existing relatedImages section from the target CSV and replace it in the source CSV
+          sed -n '/relatedImages:/,/^\s*-/p' "$csv_file" > temp_related_images.txt
+          sed -i '/relatedImages:/,/^\s*-/d' "$source_csv_file"
+          sed -i '/^spec:/r temp_related_images.txt' "$source_csv_file"
+          rm temp_related_images.txt
           
-          # Ensure related image environment variables exist before processing
-          if [ "$related_image_envs" != "null" ]; then
-              # Loop through and restore related image environment variables
-              echo "$related_image_envs" | yq eval -o=json | jq -c '.[]' | while IFS= read -r row; do
-                  name=$(echo "$row" | jq -r '.name')
-                  value=$(echo "$row" | jq -r '.value')
+          # Preserve RELATED_IMAGE_* environment variables
+          sed -n '/RELATED_IMAGE_/p' "$csv_file" > temp_related_envs.txt
+          sed -i '/RELATED_IMAGE_/d' "$source_csv_file"
+          sed -i '/env:/r temp_related_envs.txt' "$source_csv_file"
+          rm temp_related_envs.txt
           
-                  if [ -n "$name" ]; then
-                      echo "Restoring $name"
-                      # Append the environment variable to the source CSV
-                      yq eval -i ".spec.install.spec.deployments[0].spec.template.spec.containers[].env += [{name: \"$name\", value: \"$value\"}]" "$source_csv_file"
-                  fi
-              done
-          else
-              echo "No RELATED_IMAGE_* environment variables found."
-          fi
+          echo "relatedImages and RELATED_IMAGE_* environment variables have been preserved and restored."
 
-      - name: Remove Unwanted Labels from Dockerfile
-        run: |
-          # Remove specific labels from the Dockerfile in the target repo
-          dockerfile_path="target_repo/bundle/Dockerfile"
-          yq eval 'del(.annotations."operators.operatorframework.io.bundle.channels.v1", .annotations."operators.operatorframework.io.bundle.channel.default.v1")' -i "$dockerfile_path"
-
+      
       - name: Sync Dockerfile
         run: |
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
