--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -159,21 +159,19 @@ jobs:
           SOURCE_CSV=source_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml
 
           # Step 1: Load existing target CSV and extract containerImage
-          container_image=$(yq e '.spec.template.spec.containers[0].image' "$TARGET_CSV")
+          #container_image=$(yq e '.spec.template.spec.containers[0].image' "$TARGET_CSV")
           related_images=$(yq e '.spec.relatedImages' "$TARGET_CSV" | yq e -P -)
-          related_images_upper=$(yq e '.spec.RELATED_IMAGES' "$TARGET_CSV" | yq e -P -)
+          #related_images_upper=$(yq e '.spec.RELATED_IMAGES' "$TARGET_CSV" | yq e -P -)
 
-          echo "Extracted containerImage: $container_image"
+          #echo "Extracted containerImage: $container_image"
           echo "Extracted relatedImages: $related_images"
-          echo "Extracted RELATED_IMAGES: $related_images_upper"
+          #echo "Extracted RELATED_IMAGES: $related_images_upper"
 
           modified_source=$(yq e 'del(.spec.relatedImages, .spec.RELATED_IMAGES, .spec.template.spec.containers[0].image)' "$SOURCE_CSV")
 
           # Step 3: Merge source content with the target's unchanged fields
           updated_csv=$(echo "$modified_source" | yq e "
             .spec.relatedImages = $related_images |
-            .spec.RELATED_IMAGES = $related_images_upper |
-            .spec.template.spec.containers[0].image = \"$container_image\"
           ")
 
           # Step 4: Write the updated CSV back to the target
